--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,8 @@ compile.on.save=false
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.AbsoluteLayout.jar=C:\\Users\\Myrian\\Documents\\Librerias\\AbsoluteLayout.jar
+file.reference.postgresql-42.2.5.jar=C:\\Users\\Myrian\\Documents\\Librerias\\AbsoluteLayout.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
