--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Examen
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=C:\\Users\\willi\\OneDrive\\Documentos\\NetBeansProjects\\mvc\\librerias\\AbsoluteLayout.jar
-file.reference.postgresql-42.2.5.jar=C:\\Users\\willi\\OneDrive\\Documentos\\NetBeansProjects\\mvc\\librerias\\postgresql-42.2.5.jar
+file.reference.AbsoluteLayout.jar=librerias\\AbsoluteLayout.jar
+file.reference.postgresql-42.2.5.jar=librerias\\postgresql-42.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
